Remove vw from video to resolve spacing issue.

--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ div#aboutMeText {
    border-radius: 25px/25px;
    padding: 0px;
    min-width: 300px;
-   width: 15vw;
 }
 
 a:link {
